--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git status<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <header>
         <div class="header_menu">
             <ul class="header_menu_list">
-                <li>Главная</li>
+                <li>Главная страница</li>
                 <li>Со своим автомобилем</li>
                 <li>На автомобиле компании</li>
                 <li>Требования</li>
