add span in main page

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@ git status<!DOCTYPE html>
 <body>
     <header>
         <div class="header_menu">
+            <span></span>
             <ul class="header_menu_list">
                 <li>Главная страница</li>
                 <li>Со своим автомобилем</li>
